--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="8RnhPu-JM8Kcw5JjYFBguQC19IJRN82ydvpHLaJFVTE" />
+    <meta name="description" content="Eng arzon narsalar faqat bizda,barcha tovarlarga 50% chegirma">
+    <meta name="robot" content="noindex">
+    <link rel="canonical" href="/">
     <title>MyShop</title>
   </head>
   <body>
