--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="8RnhPu-JM8Kcw5JjYFBguQC19IJRN82ydvpHLaJFVTE" />
     <meta name="description" content="Eng arzon narsalar faqat bizda,barcha tovarlarga 50% chegirma">
     <meta name="robot" content="noindex">
-    <link rel="canonical" href="/">
+    <link rel="canonical" href="https://no1-chi.vercel.app/">
     <title>MyShop</title>
   </head>
   <body>
